--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -8,13 +8,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Demo商城</a>
+      <a class="navbar-brand" href="<%= root_path%>">Demo商城</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="<%= root_path%>">Home <span class="sr-only">(current)</span></a></li>
         <li><a href="#">分类</a></li>
 
       </ul>
@@ -26,8 +26,14 @@
       </form>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">购物车</a></li>
-        <li><a href="<%= new_session_path %>">登录</a></li>
-        <li><a href="<%= new_user_path %>">注册</a></li>
+        <% unless logged_in? %>
+          <li><a href="<%= new_session_path %>">登录</a></li>
+          <li><a href="<%= new_user_path %>">注册</a></li>
+        <% else %>
+          <li><a href="#">欢迎你, <%= current_user.username %></a></li>
+          <li><%= link_to "退出", logout_path, method: :delete %></li>
+        <% end -%>
+
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">个人中心 <span class="caret"></span></a>
           <ul class="dropdown-menu">
