--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -25,7 +25,7 @@
   <div class="form-group">
     <label class="col-sm-2 control-label">确认密码*</label>
     <div class="col-sm-10">
-      <%= f.password_field :password, class: "form-control", placeholder: "确认密码"%>
+      <%= f.password_field :password_confirmation, class: "form-control", placeholder: "确认密码"%>
     </div>
   </div>
   <div class="form-group">
