--- a/app/views/admin/categories/new.html.erb
+++ b/app/views/admin/categories/new.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <h1><%= @category.new_record? ? "新建分类" : "修改分类 ##{params[:id]}" %></h1>
+  <h3><%= @category.new_record? ? "新建分类" : "分类 :#{@category.title}" %></h3>
 </div>
 
 <div class="form-body">
