--- a/app/views/admin/layouts/_nav.html.erb
+++ b/app/views/admin/layouts/_nav.html.erb
@@ -14,9 +14,9 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="<%= admin_root_path%>">Home <span class="sr-only">(current)</span></a></li>
-        <li><a href="<%= admin_categories_path%>">分类</a></li>
-        <li><a href="#">产品</a></li>
+        <li class="<%= 'active' if @tab == 'home' %>"><a href="<%= admin_root_path%>">Home <span class="sr-only">(current)</span></a></li>
+        <li class="<%= 'active' if @tab == 'category' %>"><a href="<%= admin_categories_path%>">分类</a></li>
+        <li class="<%= 'active' if @tab == 'product' %>"><a href="#">产品</a></li>
 
       </ul>
 
