--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -15,17 +15,19 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="<%= root_path%>">Home <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">分类</a></li>
 
       </ul>
-      <form class="navbar-form navbar-left">
+      <%= form_tag search_products_path, method: :get, class: "navbar-form navbar-left" do %>
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="搜索...">
+          <% if @category %>
+            <input type="hidden" name="category_id" value="<%= @category.id %>" />
+          <% end %>
+          <input type="text" name="key" value="<%= params[:key] %>" class="form-control search-input" placeholder="<%= @category ? "在 #{@category.title} 下搜索.." : '搜索整站商品..' %>">
         </div>
         <button type="submit" class="btn btn-default">搜索</button>
-      </form>
+      <% end %>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">购物车</a></li>
+        <li><%= link_to "购物车(#{@cart_count? @cart_count : 0})", carts_path %></li>
         <% unless logged_in? %>
           <li><a href="<%= new_session_path %>">登录</a></li>
           <li><a href="<%= new_user_path %>">注册</a></li>
