--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -7,6 +7,45 @@
     <div id="address_list">
 
     </div>
+
+    <div class="page-header">
+      <h4><i class="fa fa-credit-card"></i> 支付方式</h4>
+    </div>
+    <ul class="list-group">
+      <li class="list-group-item">
+        <input type="radio" name="payment_method" value="alipay" checked />
+        <%= image_tag "alipay.png", width: 100 %>
+      </li>
+    </ul>
+
+    <div class="page-header">
+      <h4><i class="fa fa-list-alt"></i> 商品列表</h4>
+    </div>
+    <% @carts.each do |cart| %>
+      <div class="media cart-row">
+        <div class="media-left">
+          <%= image_tag cart.product.main_picture.attachment.thumb.url, class: 'media-object', alt: cart.product.title %>
+        </div>
+        <div class="media-body">
+          <h4 class="media-heading"><%= cart.product.title %></h4>
+          数量: <%= cart.amount %> 价格: ¥<%= cart.amount * cart.product.price %>
+        </div>
+      </div>
+    <% end -%>
+
+    <br />
+    <div class="pull-right">
+      <%= form_tag orders_path, method: :post, class: "create-order-form" do %>
+        <input type="hidden" name="address_id" />
+        <strong>总价: ¥<%= @carts.sum { |cart| cart.amount * cart.product.price } %></strong>
+        <input type="submit" value="确认订单" class="btn btn-danger btn-lg" />
+      <% end %>
+    </div>
+    <div class="clearfix"></div>
+    <br />
+    <br />
+    <br />
+    <br />
   </div>
 </div>
 
