--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -4,14 +4,22 @@
     <div class="page-header">
       <h4><i class="fa fa-credit-card"></i> 支付宝付款</h4>
     </div>
+    <p>订单号: <%= "<strong>#{@payment.order.order_no}</strong>".html_safe %></p>
     <ul class="list-group">
       <li class="list-group-item">
         <%= image_tag "alipay.png", width: 100 %>
       </li>
     </ul>
+
     <br />
     <div class="pull-right">
-      <%= form_tag payments_path, method: :post do %>
-        <input type="submit" value="支付" class="btn btn-danger btn-lg" />
-      <% end %>
+      <form action="<%= @payment_url %>" method="post">
+        <% @pay_options.each do |k, v| %>
+          <input type="hidden" name="<%= k %>" value="<%= v %>" />
+        <% end -%>
+        <strong>¥<%= @payment.total_money %></strong>
+        <input type="submit" value="支付" class="btn btn-success btn-lg" />
+      </form>
     </div>
+  </div>
+</div>
