--- a/app/views/admin/home/index.html.erb
+++ b/app/views/admin/home/index.html.erb
@@ -1,22 +1,24 @@
-<div>
-  <table class="table table-striped">
-    <tr>
-      <th>ID</th>
-      <th>用户名</th>
-      <th>邮箱</th>
-      <th></th>
-    </tr>
-
-    <% @users.each do |user| %>
+<% if current_user.super_admin? %>
+  <div>
+    <table class="table table-striped">
       <tr>
-        <td><%= user.id %></td>
-        <td><%= user.username %></td>
-        <td><%= user.email %></td>
-        <td align="right">
-        </td>
+        <th>ID</th>
+        <th>用户名</th>
+        <th>邮箱</th>
+        <th></th>
       </tr>
-    <% end -%>
-  </table>
 
-  <%= paginate @users %>
-</div>
+      <% @users.each do |user| %>
+        <tr>
+          <td><%= user.id %></td>
+          <td><%= user.username %></td>
+          <td><%= user.email %></td>
+          <td align="right">
+          </td>
+        </tr>
+      <% end -%>
+    </table>
+
+    <%= paginate @users %>
+  </div>
+<% end -%>
