--- a/app/views/admin/layouts/_nav.html.erb
+++ b/app/views/admin/layouts/_nav.html.erb
@@ -25,7 +25,7 @@
           <li><a href="#">欢迎你, <%= current_user.username %></a></li>
           <li><%= link_to "退出", admin_logout_path, method: :delete %></li>
         <% else %>
-          <li><a href="<%= new_admin_session_path %>">登录</a></li>
+          <li><a href="<%= new_session_path %>">登录</a></li>
         <% end -%>
       </ul>
     </div><!-- /.navbar-collapse -->
