--- a/app/views/admin/home/index.html.erb
+++ b/app/views/admin/home/index.html.erb
@@ -5,7 +5,7 @@
         <th>ID</th>
         <th>用户名</th>
         <th>邮箱</th>
-        <th></th>
+        <th>角色</th>
       </tr>
 
       <% @users.each do |user| %>
@@ -13,7 +13,14 @@
           <td><%= user.id %></td>
           <td><%= user.username %></td>
           <td><%= user.email %></td>
-          <td align="right">
+          <td>
+            <% if user.super_admin? %>
+              超级管理员
+            <% else %>
+              <label><input class='set-role' type="radio" name="<%= user.id%>" value="0" <%= 'checked' if user.common? %> />会员</label>
+              <label><input class='set-role' type="radio" name="<%= user.id %>" value="1" <%= 'checked' if user.admin? %> />商家</label>
+            <% end -%>
+
           </td>
         </tr>
       <% end -%>
